# simbot

./: Makefile.am  README.md  autogen.pre-hook  configure.ac  simbot.pc.in
simbot/: Makefile.am  sbbase.c  sbbase.h  sbbot.c  sbbot.h  sbsim.c  sbsim.h  sbtypes.in  simbot.h
test/: piftest.conf.in  test_base.in  test_bot.in  test_sim.in
